--- a/asssignment1/style.css
+++ b/asssignment1/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: rgb(230, 200, 252);
   text-align: center;
-  padding: 5%;
+  padding: 28%;
   line-height: 1.2;
   grid: 0cm;
 
@@ -15,9 +15,9 @@ header {
 }
 header.my-class1 {
   font-size: medium;
-  padding-top: 5%;
   font-family: paytone one;
   color: rgba(88, 56, 151, 0.915);
+  padding: 10%;
 }
 
 h1 {
@@ -41,4 +41,10 @@ p {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   color: rgb(150, 120, 242);
+}
+li{
+   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  color: rgb(150, 120, 242);
+  
 }
