--- a/asssignment1/style.css
+++ b/asssignment1/style.css
@@ -1,22 +1,28 @@
+/* overall, my styling is simple as I wanted to ensure I can do the basics correctlt for the first assignement. I aimed to use the styling we learnt in class to ensure my understadning before trying more complex wepbpage designs */
 body {
   background-color: rgb(230, 200, 252);
   text-align: center;
-  padding: 28%;
+  padding: 0%;
   line-height: 1.2;
   grid: 0cm;
+  margin: 0px 200px 50px 200px;
   /* i chose the bakcground colour for purple as it matches the aesthetic of the webpage */
 }
 img {
   max-width: 500px;
+  border: 7px solid rgb(162, 177, 247);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 header {
   font-weight: bold;
 }
 header.my-class1 {
-  font-size: medium;
+  font-size: larger;
   font-family: paytone one;
   color: rgba(88, 56, 151, 0.915);
-  padding: 10%;
+  margin: 20px 200px 50px 200px;
 }
 /* i used a darker shade and the font as it makes it easier to distinguish the questions */
 h1 {
@@ -28,24 +34,42 @@ h1 {
   border-width: 5px 5px;
   border-radius: 30px;
   border-color: aliceblue;
+  margin: 50px 200px 10px 200px;
 }
 
 header.my-class2 {
   color: rgb(247, 236, 115);
   font-family: rubik bubbles;
   text-decoration: underline aliceblue 3px;
-  /* i used this yello and this font as it stays in the aesthetic of Luniverse, and the font reflects the floating elements of the page */
+  margin: 0px 200px 50px 200px;
+  /* i used this yellow and this font as it stays in the aesthetic of Luniverse, and the font reflects the floating elements of the page */
 }
 p {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   color: rgb(150, 120, 242);
+  margin: 0px 200px 50px 200px;
 }
 li {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   color: rgb(150, 120, 242);
+  margin: 0px 50px 10px 50px;
+  /* i used a list style to meet the questions expectations of listing */
 }
 video {
   max-width: 500px;
+  border: 7px solid rgb(247, 246, 205);
 }
+a{
+   font-family: paytone one;
+   color: rgb(172, 116, 245);
+   text-align: center;
+   margin: 250px 0px 250px 0px;
+   font-size: medium;
+   /* im still trying to understand how to use margins correctly */
+}
+a:hover{
+   color: rgb(23, 12, 230);
+}
+/* i added a hover colour so that it makes it easier to identify that its a link */
