--- a/Assignment2/style.css
+++ b/Assignment2/style.css
@@ -47,6 +47,8 @@ header {
   font-size: 30px;
 }
 
+/*  i increased the font weight for the headers to show that is the title  */
+
 /* Navigation styling */
 nav {
   /* margin-top: 20px; */
@@ -66,11 +68,15 @@ nav ul {
   font-weight: 200;
 }
 
+/* i added the fonts into all the text beggining from the navigation bar */
+
 
 nav ul li {
   margin-right: 20px;
   margin-left: 20px;
 }
+
+/* i had to use magins function to ensure equal space between all */
 
 nav a {
   text-decoration: none;
@@ -107,21 +113,7 @@ nav a {
   align-items: center;
 }
 
-.progress-bar {
-  width: 100%;
-  height: 10px;
-  background-color: #ddd;
-  margin-top: 10px;
-  overflow: hidden;
-}
 
-.progress-bar span {
-  display: block;
-  height: 100%;
-  background-color: var(--main-bg-color);
-  width: 0;
-  transition: width 0.3s ease;
-}
 
 /* Footer styling */
 footer {
@@ -138,9 +130,12 @@ img {
   margin-right: auto;
   flex: content;
 }
+/* this was used for the fireflt images i created  */
 .img.hover {
   border-radius: 50%;
 }
+
+/*  i added this to show some action in the website and its a simple interactive element tha can be added for an element of surprise */
 
 audio {
   padding-top: 2%;
@@ -205,9 +200,12 @@ p.my-class {
   text-align: left;
   
 }
+/* this is the styling for the hearts, ite blue to keep it cohesive */
 p.my-class:hover{
     color: #b20606;
 }
+
+/* i chose red as its a classic steretypical "liked" colour, but also because itll be easier for users to identify its function */
 
 p.my-class1{
     margin-top: 0%;
@@ -218,8 +216,9 @@ p.my-class1:hover{
     color: #0206c4;
     text-decoration: underline;
 }
+/* this is to show that the email is being hovered and clicked i chose a darker blue as the email isnt an icon or image, but is text  */
 
-
+/* these are all my mistakes, you may ignore them, i am keeping for my own relfection */
 /* p.my-class:active{
 color: #f00808;
 }
